--- a/view.html
+++ b/view.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title></title>
-	<link rel="stylesheet" href="main.css">
-	<script type="text/javascript" src="js/capture.js"></script>
-	<script type="text/javascript" src="js/docomo.js"></script>
-	<script type="text/javascript" src="js/main.js"></script>
-	<script type="text/javascript" src="js/tts.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-</head>
-<body>
-	
-</body>
+	<head>
+		<meta charset="utf-8">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<title>View</title>
+		<link rel="stylesheet" href="view.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script type="text/javascript" src="js/capture.js"></script>
+	</head>
+	<body>
+		<video autoplay width="640" height="480"></video>
+		<img src="" width="640" height="480" >
+		<canvas style="display:none;" width="640" height="480"></canvas>
+		<div id="wrapper">
+			<button id="capture">capture</button>
+			<button id="stop">stop</button>
+		</div>
+	</body>
+	<script>
+	</script>
 </html>
