--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
-	
+	<div id="wapper">
+	<div class="lang">日本語</div>
+		<div class="logo">
+			<img src="img/logo.png">
+		</div>
+		<div class="btn_wrap">
+			<div class="btn"><a href="view.html">Start!</a></div>
+		</div>
+	</div>
 </body>
 </html>
