テキスト追加

--- a/view.html
+++ b/view.html
@@ -9,6 +9,10 @@
 		<script type="text/javascript" src="js/capture.js"></script>
 	</head>
 	<body>
+	<div class="left">
+		<div id="text">ああああああ</div>
+	</div>
+		<div class="right">
 		<video autoplay width="640" height="480"></video>
 		<img src="" width="640" height="480" >
 		<canvas style="display:none;" width="640" height="480"></canvas>
