view 定期的に取得

--- a/view.html
+++ b/view.html
@@ -11,10 +11,13 @@
 	<body>
 		<video autoplay width="640" height="480"></video>
 		<img src="" width="640" height="480" >
-		<canvas style="display:none;" width="640" height="480"></canvas>
+		<canvas id="c1" style="display:none;" width="640" height="480"></canvas>
 		<div id="wrapper">
+<!--
 			<button id="capture">capture</button>
+-->
 			<button id="stop">stop</button>
+			<button id="start">start</button>
 		</div>
 	</body>
 	<script>
