--- a/view.html
+++ b/view.html
@@ -6,6 +6,9 @@
 		<title>View</title>
 		<link rel="stylesheet" href="view.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script type="text/javascript" src="js/docomo.js"></script>
+		<script type="text/javascript" src="js/tts.js"></script>
+		<script type="text/javascript" src="js/main.js"></script>
 		<script type="text/javascript" src="js/capture.js"></script>
 	</head>
 	<body>
