--- a/view.html
+++ b/view.html
@@ -9,17 +9,18 @@
 		<script type="text/javascript" src="js/capture.js"></script>
 	</head>
 	<body>
-	<div class="left">
-		<div id="text">ああああああ</div>
-	</div>
+	<div id="wrapper">
+		<div class="left">
+			<div id="text">ああああああ</div>
+		</div>
 		<div class="right">
-		<video autoplay width="640" height="480"></video>
-		<img src="" width="640" height="480" >
+		<video autoplay width="320" height="240" class=""></video>
+		<img src="" width="320" height="240" class="img">
 		<canvas style="display:none;" width="640" height="480"></canvas>
-		<div id="wrapper">
+		</div>
 			<button id="capture">capture</button>
 			<button id="stop">stop</button>
-		</div>
+	</div>
 	</body>
 	<script>
 	</script>
