Startのクリックイベント領域

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 			<img src="img/logo.png">
 		</div>
 		<div class="btn_wrap">
-			<div class="btn"><a id="nextPage" href="#">Start!</a></div>
+			<div id="nextPage" class="btn"><a href="#">Start!</a></div>
 		</div>
 	</div>
 </body>
